<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".UI.ShowImageActivity">

    <ImageView
        android:id="@+id/bigImageView"
        android:layout_width="385dp"
        android:layout_height="347dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/picNameEditText"
        android:layout_width="229dp"
        android:layout_height="27dp"
        android:layout_marginTop="56dp"
        android:text="@string/charactername"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bigImageView" />

    <TextView
        android:id="@+id/picSexEditText"
        android:layout_width="229dp"
        android:layout_height="27dp"
        android:layout_marginTop="28dp"
        android:text="@string/sexofcharacter"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="@id/picNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/picNameEditText" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/backbuttontext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picSexEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>