<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/listRowBackGround"
    android:paddingTop="@dimen/small_margin"
    android:paddingBottom="@dimen/small_margin">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/CardViewHeight"
        app:cardCornerRadius="@dimen/CornersRadius"
        app:cardMaxElevation="20dp"
        android:elevation="8dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="0.0px"
        android:clipToPadding="false"
        android:clipChildren="false"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_toEndOf="@id/imageView"
                android:padding="@dimen/small_margin"
                android:text="@string/nametext" />


            <TextView
                android:id="@+id/GenderTextView"
                style="@style/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTextView"
                android:layout_toEndOf="@id/imageView"
                android:padding="@dimen/small_margin"
                android:text="@string/gendertext" />

            <ImageView
                android:id="@+id/imageView"
                style="@style/Text"
                android:layout_width="@dimen/small_image"
                android:layout_height="@dimen/small_image"
                android:layout_alignParentStart="false"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                android:contentDescription="@string/imagedescription"
                app:srcCompat="@mipmap/ic_launcher" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>